<?xml version="1.0"?>
<package>
  <name>candynamix_simulations</name>
  <version>0.1.0</version>
  <description>
    ROS packages for the candynamix simulation (meta package)
  </description>
  <license>Apache License 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/candynamix_simulations/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/candynamix_simulations</url>
  <url type="website">http://candynamix.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>candynamix_rviz</run_depend>
  <run_depend>candynamix_gazebo</run_depend>
  <export><metapackage/></export>
</package>
